--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vituum/vite-plugin-twig": "^1.1.0",
     "sass": "^1.84.0",
     "vite": "^6.1.0",
+    "vite-plugin-purgecss": "^0.2.13",
     "vituum": "^1.1.1"
   }
 }
